Feat/switch to webpack (#2)
* Move cameras gulp task to own file in bin directory

* (npm scripts) Access karma & protractor with $(npm bin)

* Switch to webpack from angular

* Remove jquery from main.js

* Set angular as eslint global

* Move build to public

* Update package-lock & bump node version to ~9

* Fixes #1 : Upgrade Angular packages

* fix: package.json to reduce vulnerabilities

The following vulnerabilities are fixed with an upgrade:
- https://snyk.io/vuln/npm:bootstrap:20160627
- https://snyk.io/vuln/npm:jquery:20150627
- https://snyk.io/vuln/npm:lodash:20180130
- https://snyk.io/vuln/npm:moment:20170905

Latest report for charlesponti/tflcameras:package.json:
https://snyk.io/test/github/charlesponti/tflcameras?targetFile=package.json

* Fix Karma tests

* update readme

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,10 +1,10 @@
 {
-  "extends": ["eslint:recommended", "standard"],
+  "extends": [
+    "eslint:recommended",
+    "standard"
+  ],
   "globals": {
     "google": true,
     "angular": true
-  },
-  "env": {
-    "jasmine": true
   }
 }
